--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -2,7 +2,7 @@ openapi: "3.0.3"
 info:
   title: Mockez API
   description: Website MOCKEZ generates source for system testing.
-  version: 1.0.0
+  version: 2.0.0
 paths:
   /sql-type:
     get:
@@ -182,7 +182,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/GenerateRequestBody'
+              $ref: '#/components/schemas/GenerateReq'
       responses:
         200:
           description: The query is successful
@@ -214,14 +214,22 @@ components:
         - sqlType
         - generateType
         - option
+        - version
       description: FIELD table
       properties:
         id:
           readOnly: true
           type: string
-          description: id of table
+          format: uuid
+          description: id of record
+        version:
+          readOnly: true
+          type: integer
+          description: version of record
         name:
           type: string
+          maxLength: 225
+#          pattern: '^[a-z]$ | [_]'
           description: name of field
         sqlType:
           $ref: '#/components/schemas/SQLType'
@@ -235,17 +243,25 @@ components:
         - id
         - code
         - description
+        - version
       description: SQLTYPE table
       properties:
         id:
           readOnly: true
           type: string
-          description: id of table
+          format: uuid
+          description: id of record
+        version:
+          readOnly: true
+          type: integer
+          description: version of record
         code:
           type: string
+          maxLength: 225
           description: name of field
         description:
           type: string
+          maxLength: 1000
           description: type in SQL
         generateTypes:
           type: array
@@ -258,17 +274,25 @@ components:
         - code
         - description
         - category
+        - version
       description: GENERATETYPE table
       properties:
         id:
           readOnly: true
           type: string
-          description: id of table
+          format: uuid
+          description: id of record
+        version:
+          readOnly: true
+          type: integer
+          description: version of record
         code:
           type: string
+          maxLength: 225
           description: code for generate
         description:
           type: string
+          maxLength: 1000
           description: description for generate type
         category:
           $ref: '#/components/schemas/Category'
@@ -284,19 +308,27 @@ components:
       type: object
       required:
         - id
-        - type
+        - name
         - description
+        - version
       description: CATEGORY table
       properties:
         id:
           readOnly: true
           type: string
-          description: id of table
-        type:
+          format: uuid
+          description: id of record
+        version:
+          readOnly: true
+          type: integer
+          description: version of record
+        name:
           type: string
+          maxLength: 225
           description: name of category
         description:
           type: string
+          maxLength: 1000
           description: description for generate type
         generateTypes:
           type: array
@@ -308,14 +340,21 @@ components:
         - id
         - value
         - generateType
+        - version
       description: Source table
       properties:
         id:
           readOnly: true
           type: string
-          description: id of table
+          format: uuid
+          description: id of record
+        version:
+          readOnly: true
+          type: integer
+          description: version of record
         value:
           type: string
+          maxLength: 1000
           description: value of source
         generateType:
           $ref: '#/components/schemas/GenerateType'
@@ -324,15 +363,22 @@ components:
       required:
         - id
         - blank
+        - version
       description: OPTION table
       properties:
         id:
           readOnly: true
           type: string
-          description: id of table
-        blank:
-          default: 0
+          format: uuid
+          description: id of record
+        version:
+          readOnly: true
           type: integer
+          description: version of record
+        blank:
+          type: integer
+          default: 0
+          maximum: 100
           description: blank percent
     Error:
       description: Schema for error response body
@@ -372,35 +418,25 @@ components:
             * ACTION_NOT_ALLOWED - the action not allowed.
         additionalMessage:
           type: string
-    GenerateRequestBody:
+    GenerateReq:
       type: object
       description: The body of generate request
       required:
         - row
-        - format
-        - tableName
         - fields
       properties:
         row:
           readOnly: true
           type: integer
           default: 0
+          maximum: 1000
           description: Row number of source
-        format:
-          readOnly: true
-          type: string
-          default: "SQL"
-          description: Format of source
-        tableName:
-          readOnly: true
-          type: string
-          description: Name of table
         fields:
           readOnly: true
           type: array
+          description: Fields of table
           items:
             $ref: '#/components/schemas/Field'
-          description: Fields of table
   responses:
     NotFound:
       description: The specified resource was not found
