--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -505,7 +505,7 @@ paths:
     get:
       operationId: getGroupsWithAccess
       tags:
-        - Schema
+        - Group
       description: Return groups has access
       responses:
         200:
@@ -516,6 +516,89 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Group'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+    post:
+      operationId: saveOrUpdateGroup
+      tags:
+        - Group
+      description: Save or Update a Group
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Group'
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: string
+                format: uuid
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /group/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The groupId
+        schema:
+          type: string
+          format: uuid
+    get:
+      operationId: getGroup
+      tags:
+        - Group
+      description: Return group
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Group'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+    delete:
+      operationId: deleteGroup
+      tags:
+        - Group
+      description: Return id of deleted group
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: string
+                format: uuid
         400:
           $ref: '#/components/responses/BadRequest'
         401:
