--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -375,18 +375,66 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /generate:
+  /generate/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The id of table
+        schema:
+          type: string
+          format: uuid
     post:
       operationId: generate
       tags:
         - Generate
-      description: Generate source
+      description: Generate random row in table
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/GenerateRequestBody'
+              type: integer
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  additionalProperties:
+                    type: string
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /generate:
+    parameters:
+      - in: query
+        name: row
+        required: true
+        description: number row need query
+        schema:
+          type: number
+    post:
+      operationId: Show generate
+      tags:
+        - Generate
+      description: Show generate random row in table
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: integer
       responses:
         200:
           description: The query is successful
