--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -2,7 +2,7 @@ openapi: "3.0.3"
 info:
   title: Mockez API
   description: Website MOCKEZ generates source for system testing.
-  version: 2.3.0
+  version: 3.0.0
 paths:
   /user/{id}:
     parameters:
@@ -425,7 +425,7 @@ paths:
         schema:
           type: number
     post:
-      operationId: Show generate
+      operationId: showGenerate
       tags:
         - Generate
       description: Show generate random row in table
@@ -434,7 +434,7 @@ paths:
         content:
           application/json:
             schema:
-              type: integer
+              $ref: '#/components/schemas/Table'
       responses:
         200:
           description: The query is successful
