--- a/mockez-front/package.json
+++ b/mockez-front/package.json
@@ -28,6 +28,7 @@
     "ngx-markdown": "^14.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "vkbeautify": "^0.99.3",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -37,6 +38,8 @@
     "@angular/compiler-cli": "^14.0.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
+    "@types/marked": "^4.0.3",
+    "@types/vkbeautify": "^0.99.2",
     "autoprefixer": "^10.4.12",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
@@ -46,7 +49,6 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
-    "typescript": "~4.7.2",
-    "@types/marked": "^4.0.3"
+    "typescript": "~4.7.2"
   }
 }
