--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -70,6 +70,37 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
+  /auth/check-exist/{username}:
+    parameters:
+      - in: path
+        name: username
+        required: true
+        description: The username of user
+        schema:
+          type: string
+          format: email
+    get:
+      operationId: checkIsExistUsername
+      tags:
+        - Auth
+      description: check is exists username
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: boolean
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
   /user/{id}:
     parameters:
       - in: path
