--- a/mockez-back/src/main/resources/static/mockez.yaml
+++ b/mockez-back/src/main/resources/static/mockez.yaml
@@ -4,12 +4,12 @@ info:
   description: Website MOCKEZ generates source for system testing.
   version: 3.0.0
 paths:
-  /auth/sendcode:
+  /auth/send-verification-code:
     post:
-      operationId: sendOTP
+      operationId: sendVerificationCode
       tags:
-        - Signup
-      description: signup SendOTP
+        - Auth
+      description: send verification code when register user
       requestBody:
         required: true
         content:
@@ -34,19 +34,19 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /auth/validate/{otpCode}:
+  /auth/verify/{verificationCode}:
     parameters:
       - in: path
-        name: otpCode
+        name: verificationCode
         required: true
-        description: otpCode
+        description: verification code
         schema:
-          type: integer
+          type: string
     post:
-      operationId: signup
+      operationId: verifyAndSave
       tags:
-        - Signup
-      description: signup user
+        - Auth
+      description: verify code and save user
       requestBody:
         required: true
         content:
@@ -70,7 +70,7 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /auth/check-exist/{username}:
+  /auth/is-existed-username/{username}:
     parameters:
       - in: path
         name: username
@@ -80,7 +80,7 @@ paths:
           type: string
           format: email
     get:
-      operationId: checkIsExistUsername
+      operationId: isExistedUsername
       tags:
         - Auth
       description: check is exists username
@@ -91,6 +91,42 @@ paths:
             application/json:
               schema:
                 type: boolean
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /auth/change-password/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The user id
+        schema:
+          type: string
+          format: uuid
+    put:
+      operationId: changePassword
+      tags:
+        - Auth
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangePassword'
+      description: change password of a user
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
         400:
           $ref: '#/components/responses/BadRequest'
         401:
@@ -251,34 +287,6 @@ paths:
             format: email
       tags:
         - User
-      description: get user by username
-      responses:
-        200:
-          description: The query is successful
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/User'
-        400:
-          $ref: '#/components/responses/BadRequest'
-        401:
-          $ref: '#/components/responses/AuthenticationError'
-        403:
-          $ref: '#/components/responses/Unauthorized'
-        404:
-          $ref: '#/components/responses/NotFound'
-        500:
-          $ref: '#/components/responses/ServerError'
-  /user/change-password:
-    put:
-      operationId: changePassword
-      tags:
-        - User
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ChangPasswordRequest'
       description: get user by username
       responses:
         200:
@@ -1467,16 +1475,13 @@ components:
             $ref: '#/components/schemas/GroupMember'
       allOf:
         - $ref: '#/components/schemas/Base'
-    ChangPasswordRequest:
+    ChangePassword:
       type: object
       description: the request of change password api
       properties:
-        userId:
+        oldPassword:
           type: string
-          format: uuid
-        currentPassword:
-          type: string
-          description: the current password
+          description: the old password
         newPassword:
           type: string
           description: the new password
