--- a/mocker-back/src/main/resources/static/mocker.yaml
+++ b/mocker-back/src/main/resources/static/mocker.yaml
@@ -971,13 +971,44 @@ paths:
       operationId: upsertTableRelation
       tags:
         - TableRelation
-      description: update or insert a table relation
+      description: Update or insert a table relation
       requestBody:
         required: true
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/TableRelation'
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TableRelation'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /table-relation/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The table relation ID
+        schema:
+          type: string
+          format: uuid
+    delete:
+      operationId: deleteTableRelation
+      tags:
+        - TableRelation
+      description: Delete a table relation
       responses:
         200:
           description: The query is successful
