--- a/mocker-back/src/main/resources/static/mocker.yaml
+++ b/mocker-back/src/main/resources/static/mocker.yaml
@@ -386,7 +386,41 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-  /generate/{id}:
+  /generate/schema/{id}:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The schema id
+        schema:
+          type: string
+          format: uuid
+    get:
+      operationId: generateWithSchema
+      tags:
+        - Generate
+      description: Generate with schema Id
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                additionalProperties:
+                  type: array
+                  additionalProperties:
+                    type: object
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /generate/table/{id}:
     parameters:
       - in: path
         name: id
