--- a/mocker-back/src/main/resources/static/mocker.yaml
+++ b/mocker-back/src/main/resources/static/mocker.yaml
@@ -243,6 +243,38 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
+  /user/search-by-criteria:
+    get:
+      operationId: getUsersByCriteria
+      description: Get users by criteria
+      parameters:
+        - in: query
+          name: criteria
+          required: true
+          description: The criteria
+          schema:
+            type: string
+      tags:
+        - User
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/User'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
   /user/find-by-username:
     get:
       operationId: getUserByUsername
