--- a/mocker-back/src/main/resources/static/mocker.yaml
+++ b/mocker-back/src/main/resources/static/mocker.yaml
@@ -1031,6 +1031,38 @@ paths:
         500:
           $ref: '#/components/responses/ServerError'
   /group-member:
+    get:
+      operationId: getGroupMembers
+      tags:
+        - GroupMember
+      description: get GroupMembers
+      parameters:
+        - in: query
+          name: groupId
+          required: true
+          description: The group ID
+          schema:
+            type: string
+            format: uuid
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GroupMember'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
     post:
       operationId: upsertGroupMember
       tags:
@@ -1059,7 +1091,8 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
-    delete:
+  /group-member/delete-group-member:
+    post:
       operationId: deleteGroupMember
       tags:
         - GroupMember
@@ -1069,14 +1102,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/GroupMember'
+              $ref: '#/components/schemas/GroupMemberPK'
       responses:
         200:
           description: The query is successful
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/GroupMember'
+                $ref: '#/components/schemas/GroupMemberPK'
         400:
           $ref: '#/components/responses/BadRequest'
         401:
