--- a/mocker-back/src/main/resources/static/mocker.yaml
+++ b/mocker-back/src/main/resources/static/mocker.yaml
@@ -594,6 +594,13 @@ paths:
         schema:
           type: string
           format: uuid
+      - in: query
+        name: roles
+        description: The roles in group
+        schema:
+          type: array
+          items:
+            $ref: '#/components/schemas/Role'
     get:
       operationId: getSchemasByProject
       tags:
@@ -624,6 +631,14 @@ paths:
       tags:
         - Schema
       description: Get schemas
+      parameters:
+        - in: query
+          name: roles
+          description: The roles in group
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Role'
       responses:
         200:
           description: The query is successful
@@ -904,6 +919,86 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/ServerError'
+  /group/{id}/projects:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The group Id
+        schema:
+          type: string
+          format: uuid
+      - in: query
+        name: roles
+        description: The roles in group
+        schema:
+          type: array
+          items:
+            $ref: '#/components/schemas/Role'
+    get:
+      operationId: getProjectsByGroupId
+      tags:
+        - Group
+      description: Get projects
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Project'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
+  /group/{id}/group-members:
+    parameters:
+      - in: path
+        name: id
+        required: true
+        description: The group Id
+        schema:
+          type: string
+          format: uuid
+      - in: query
+        name: roles
+        description: The roles in group
+        schema:
+          type: array
+          items:
+            $ref: '#/components/schemas/Role'
+    get:
+      operationId: getGroupMembersByGroupId
+      tags:
+        - Group
+      description: Get group members
+      responses:
+        200:
+          description: The query is successful
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/GroupMember'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/AuthenticationError'
+        403:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/ServerError'
   /table:
     post:
       operationId: upsertTable
@@ -1060,6 +1155,13 @@ paths:
           schema:
             type: string
             format: uuid
+        - in: query
+          name: roles
+          description: The roles in group
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/Role'
       responses:
         200:
           description: The query is successful
