--- a/mocker-back/pom.xml
+++ b/mocker-back/pom.xml
@@ -25,6 +25,7 @@
         <com.google.guava>31.1-android</com.google.guava>
         <io.jsonwebtoken.version>0.11.5</io.jsonwebtoken.version>
         <security.oauth.version>2.5.2.RELEASE</security.oauth.version>
+        <docker.image.prefix>spring-boot-mocker-console</docker.image.prefix>
     </properties>
 
     <dependencies>
@@ -155,6 +156,22 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>1.0.0</version>
+
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
