--- a/mocker-back/pom.xml
+++ b/mocker-back/pom.xml
@@ -26,6 +26,7 @@
         <io.jsonwebtoken.version>0.11.5</io.jsonwebtoken.version>
         <security.oauth.version>2.5.2.RELEASE</security.oauth.version>
         <docker.image.prefix>spring-boot-mocker-console</docker.image.prefix>
+        <lombok-mapstruct-binding.version>0.1.0</lombok-mapstruct-binding.version>
     </properties>
 
     <dependencies>
@@ -152,6 +153,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok-mapstruct-binding</artifactId>
+            <version>${lombok-mapstruct-binding.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -215,7 +221,7 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok-mapstruct-binding</artifactId>
-                            <version>0.1.0</version>
+                            <version>${lombok-mapstruct-binding.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
