--- a/mocker-back/src/main/resources/application.yaml
+++ b/mocker-back/src/main/resources/application.yaml
@@ -32,3 +32,10 @@ spring:
             clientSecret: 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
   thymeleaf:
     check-template-location: false
+server:
+  port: 8080
+  ssl:
+    key-store-type: PKCS12
+    key-store: /root/MOCKER/mocker-back/keystore.p12
+    key-store-password: mocker-console
+    key-alias: mocker
